[gd_scene load_steps=7 format=3 uid="uid://cm14wlb8acs3v"]

[ext_resource type="Script" uid="uid://bnng8de4igxvp" path="res://Weapons/WeaponTemplates/hammer_melee_weapon.gd" id="1_bpmbt"]
[ext_resource type="Texture2D" uid="uid://cxjh6hobdyebf" path="res://Weapons/Assets/Hammers/Icons/ShapeLoot/JammedCone.png" id="2_474yb"]
[ext_resource type="Texture2D" uid="uid://c4f1k085g7ac6" path="res://Weapons/Assets/Hammers/Icons/ShapeLoot/JammedConeWeapon.png" id="3_3e3xv"]
[ext_resource type="Texture2D" uid="uid://vgr6vdaknr13" path="res://Weapons/Assets/Hammers/Icons/ShapeLoot/JammedConeWeapon1.png" id="4_lndts"]
[ext_resource type="Texture2D" uid="uid://bnr65ewny672o" path="res://Weapons/Assets/Hammers/Icons/ShapeLoot/JammedConeWeapon2.png" id="5_n077n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_k75ob"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_3e3xv")
}, {
"duration": 1.0,
"texture": ExtResource("4_lndts")
}, {
"duration": 1.0,
"texture": ExtResource("5_n077n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="JammedCone" type="Node2D"]
script = ExtResource("1_bpmbt")
charging_time = 1.0
cooldown_time = 0.4
reach = 230
hammer_damage_node = "res://Weapons/Hammer/ShapeLoot/jammed_cone_area.tscn"
stamina_cost = 1
damage = 10
metadata/_custom_type_script = "uid://bnng8de4igxvp"

[node name="WeaponIcon" type="Sprite2D" parent="."]
texture = ExtResource("2_474yb")

[node name="AttackStates" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_k75ob")

[node name="ChargeTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ChargeTimer" to="." method="_on_charge_timer_timeout_do_attack"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
