[gd_scene load_steps=4 format=3 uid="uid://bbitmc31tj7t5"]

[ext_resource type="Script" path="res://Weapons/WeaponTemplates/hammer_melee_weapon.gd" id="1_vnn57"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ksvm3"]
radius = 23.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wn2ya"]
radius = 128.996

[node name="HammerMeleeWeapon" type="Node2D"]
script = ExtResource("1_vnn57")

[node name="StrikeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StrikeArea"]
shape = SubResource("CircleShape2D_ksvm3")

[node name="ShockwaveArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShockwaveArea"]
shape = SubResource("CircleShape2D_wn2ya")

[node name="ChargeTimer" type="Timer" parent="."]
one_shot = true

[node name="WeaponIcon" type="Sprite2D" parent="."]

[node name="AttackStates" type="AnimatedSprite2D" parent="."]

[connection signal="timeout" from="ChargeTimer" to="." method="_on_charge_timer_timeout_do_attack"]
